--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <h2>Tentang saya</h2>
         <div class="about">
             <div class="image">
-                <img src="img/foto_saya.jpg" alt="foto saya">
+                <img src="img/logo3.png" alt="foto saya">
             </div>
             <p>Saya adalah seorang lulusan SMK jurusan Teknik Komputer dan Jaringan (TKJ) dengan keahlian di bidang web development. Saya menguasai bahasa pemrograman HTML, CSS, JavaScript, dan PHP. Saya memiliki fokus utama yaitu membangun tampilan website yang responsif, user-friendly, rapi, dan sesuai kebutuhan pengguna. Selain itu, saya juga menguasai konfigurasi Mikrotik, membuat desain topologi jaringan, dan konfigurasi web server (VPS). Saya terbiasa bekerja dengan detail, disiplin waktu, dan selalu berusaha memberikan hasil terbaik sesuai kebutuhan klien. Saya terbuka untuk kerja sama jangka pendek maupun panjang.</p> 
             <p>Untuk melihat contoh karya dan update kegiatan saya di bidang teknologi, silakan kunjungi media sosial saya: Instagram: @imadepandesagunaarta Tiktok: @pandesaguna169 Github: Pandaijaringan Website: pandaijaringan.com (dalam pengembangan) . Motto: "Dari tulisan, membangun tampilan."</p>
