--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -1,5 +1,5 @@
 <script> // Import file header
-fetch('pandaijaringan.github.io/index.html')
+fetch('/../index.html')
   .then(response => response.text())
   .then(data => {
     // Mengambil baris tertentu (misalnya, baris ke-1 hingga ke-64)
@@ -100,4 +100,4 @@ fetch('pandaijaringan.github.io/index.html')
     </section>
 </main>
 <!-- Footer -->
- <?php include_once (__DIR__ . "/../includes/footer.php");?>
+ 
