--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -112,6 +112,7 @@ fetch('/../index.html')
     const htmlToImport = selectedLines.join('\n');
 
     // Menampilkan konten yang diimpor
-    document.getElementById('header').innerHTML = htmlToImport;
+    document.getElementById('footer').innerHTML = htmlToImport;
   });
 </script>
+<div id="footer"></div>
