--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -3,12 +3,12 @@ fetch('/../index.html')
   .then(response => response.text())
   .then(data => {
     // Mengambil baris tertentu (misalnya, baris ke-1 hingga ke-64)
-   let lines = data.split('\n');
-   let selectedLines = lines.slice(0, 64);
-   let htmlToImport = selectedLines.join('\n');
+   const linesHeader = data.split('\n');
+   const selectedLinesHeader = linesHeader.slice(0, 64);
+   const htmlHeader = selectedLinesHeader.join('\n');
 
     // Menampilkan konten yang diimpor
-    document.getElementById('header').innerHTML = htmlToImport;
+    document.getElementById('header').innerHTML = htmlHeader;
   });
 </script>
 <div id="header"></div>
@@ -107,12 +107,12 @@ fetch('/../index.html')
   .then(response => response.text())
   .then(data => {
     // Mengambil baris tertentu 
-   let lines = data.split('\n');
-   let selectedLines = lines.slice(174, 28);
-   let htmlToImport = selectedLines.join('\n');
+   const linesFooteer = data.split('\n');
+   const selectedLinesFooter = linesFooter.slice(174, 28);
+   const htmlFooter = selectedLinesFooter.join('\n');
 
     // Menampilkan konten yang diimpor
-    document.getElementById('footer').innerHTML = htmlToImport;
+    document.getElementById('footer').innerHTML = htmlFooter;
   });
 </script>
 <div id="footer"></div>
