--- a/index.html
+++ b/index.html
@@ -197,6 +197,6 @@
     </div>
     <h5 class="copyright">Copyright &copy; 2025 pandaijaringan.com</h5>
 </footer>
-<script src="script.js"></script>
+<script src="https://pandaijaringan.github.io/script.js"></script>
 </body>
 </html>
