--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -116,3 +116,4 @@ fetch('/../index.html')
   });
 </script>
 <div id="footer"></div>
+<script src="https://pandaijaringan.github.io/script.js"></script>
