--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -13,7 +13,7 @@ fetch('/../index.html')
 </script>
 <div id="header"></div>
 <main>
-    <section class="artikel">
+    <section class="wrapper">
         <div class="header-teks">
             <h2>Mahir perintah dasar linux untuk pemula</h2>
             <div class="description">
