--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -60,36 +60,36 @@ fetch('/../index.html')
             <h5>Perintah untuk manajemen file</h5>
             <ol>
                 <li>cd</li>
-                <p>Perintah <code>cd</code> digunakan untuk berpindah direktori atau folder, baik masuk ataupun keluar dari direktori tertentu. Sintaksnya adalah:</p>
+                <p>Perintah cd digunakan untuk berpindah direktori atau folder, baik masuk ataupun keluar dari direktori tertentu. Sintaksnya adalah:</p>
                 <pre>cd &lt;tujuan_direktori&gt;</pre>
                 <pre>cd home&#47;pandaijaringan&#47;Documents</pre>
                 <p>Untuk kembali ke direktori sebelumnya, anda bisa mengetikan titik 2 kali seperti ini: </p>
-                <code>cd ..&#47;</code>
+                cd ..&#47;
                 <li>dir atau ls</li>
-                <p>Perintah <code>dir</code> atau <code>ls</code> digunakan untuk melihat isi dari direktori tertentu, seperti file dan folder nya. Contohnya sebagai berikut:</p>
+                <p>Perintah dir atau ls digunakan untuk melihat isi dari direktori tertentu, seperti file dan folder nya. Contohnya sebagai berikut:</p>
                 <pre>ls Documents</pre>
                 <p>Ingat, perintah diatas bersifat case-sensitive, jadi huruf besar dan huruf kecil dianggap berbeda.</p>
                 <li>mkdir</li>
-                <p><code>mkdir</code> adalah perintah untuk membuat folder&#47;direktori baru. Contohnya sebagai berikut:</p>
+                <p>mkdir adalah perintah untuk membuat folder&#47;direktori baru. Contohnya sebagai berikut:</p>
                 <pre>mkdir nama_folder</pre>
                 <li>Cat</li>
-                <p>Perintah <code>cat</code> digunakan untuk membuka file dengan format teks, sperti txt, html, md dll. Akan tetapi tidak bisa membuka file dengan format document, gambar video, dan audio. Contohnya adalah:</p>
+                <p>Perintah cat digunakan untuk membuka file dengan format teks, sperti txt, html, md dll. Akan tetapi tidak bisa membuka file dengan format document, gambar video, dan audio. Contohnya adalah:</p>
                 <pre>cat filecatatan.txt</pre>
                 <li>Touch</li>
-                <p>Perintah <code>touch</code> digunakan untuk membuat file baru berformat teks, seperti txt, html, dll. Contohnta adalah:</p>
+                <p>Perintah touch digunakan untuk membuat file baru berformat teks, seperti txt, html, dll. Contohnta adalah:</p>
                 <pre>touch catatan.txt</pre>
                 <li>Nano</li>
-                <p>Perintah <code>nano</code> digunakan untuk mengedit file berformat teks, seperti txt, html, dll. Contohnta adalah:</p>
+                <p>Perintah nano digunakan untuk mengedit file berformat teks, seperti txt, html, dll. Contohnta adalah:</p>
                 <pre>nano catatan.txt</pre>
                 <li>Pwd</li>
-                <p>Perintah <code>pwd</code> digunakan untuk melihat posisi direktori saat ini. Contohnya sebagai berikut:</p>
+                <p>Perintah pwd digunakan untuk melihat posisi direktori saat ini. Contohnya sebagai berikut:</p>
                 <pre>pwd</pre>
                 <pre>/home/pandaijaringan/</pre>
                 <li>cp (copy)</li>
-                <p>Perintah <code>cp</code> digunakan untuk meyalin file ke folder tertentu. Contohnya sebagai berikut:</p>
+                <p>Perintah cp digunakan untuk meyalin file ke folder tertentu. Contohnya sebagai berikut:</p>
                 <pre>cp file.txt direktori_tujuan</pre>
                 <li>mv</li>
-                <p>Sama ceperti perintah <code>cp</code>, hanya saja perintah <code>mv</code> digunakan untuk memindahkan file ke direktori tertentu. Sintaknya adalah:</p>
+                <p>Sama ceperti perintah cp, hanya saja perintah mv digunakan untuk memindahkan file ke direktori tertentu. Sintaknya adalah:</p>
                 <pre>mv file.txt direktori_tujuan</pre>
                 <li>rm</li>
                 <p>rm digunakan untuk menghapus file.</p>
