--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="id">
 <!-- Include header -->
 <script>
 fetch('https://pandaijaringan.github.io/includes/header.html')
@@ -114,3 +116,4 @@ fetch('/../index.html')
 </script>
 <div id="footer"></div>
 <script src="https://pandaijaringan.github.io/script.js"></script>
+</html>
