--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -109,5 +109,6 @@ fetch('https://pandaijaringan.github.io/includes/footer.html')
     document.getElementById('footer').innerHTML = html;
   });
 </script>
+<script src="https://pandaijaringan.github.io/script.js"></script>
 <div id="footer"></div>
 </html>
