--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -111,7 +111,7 @@ fetch('https://pandaijaringan.github.io/includes/footer.html')
     document.getElementById('footer').innerHTML = html;
   });
   // Untuk menjalankan fungsi init navbar
-//   let navbar = document.getElementById("navbar");
+  let navbar = document.getElementById("navbar");
   initNavbar();
 </script>
 <div id="footer"></div>
