--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -25,10 +25,13 @@
     document.getElementById('footer').innerHTML = html;
   });
     }
-  let navbar = document.getElementById("navbar");
-  let searchContainer = document.querySelector(".search-container");
-//   Memberi title di halaman
+    //   Memberi title di halaman
 document.title = "Perintah Dasar Linux untuk Pemula | Pandai Jaringan";
+// Dekkralasikan variabel navbar
+    let navbar = document.getElementById("navbar");
+    let searchContainer = document.querySelector(".search-container");
+  //   Jalankan init navbar
+      initNavbar();
 
 </script>
 <div id="header"></div>
