--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -2,39 +2,23 @@
 <html lang="id">
 <!-- Include header -->
 <script>
-    // fungsi yang dijalankan pertama kali saat load
-    window.onload=function() {
-        // jalankan load header
-        loadHeader();
-        // Jalankan load footer
-        loadFooter();
-    }
     // fungsi include header
-    function loadHeader() {
     fetch('https://pandaijaringan.github.io/includes/header.html')
   .then(res => res.text())
   .then(html => {
     document.getElementById('header').innerHTML = html;
   });
-}
+
 // Fungsi include footer
-    function loadFooter() {
  fetch('https://pandaijaringan.github.io/includes/footer.html')
   .then(res => res.text())
   .then(html => {
     document.getElementById('footer').innerHTML = html;
   });
-    }
     //   Memberi title di halaman
 document.title = "Perintah Dasar Linux untuk Pemula | Pandai Jaringan";
-// Dekkralasikan variabel navbar
-    let navbar = document.getElementById("navbar");
-    let searchContainer = document.querySelector(".search-container");
   //   Jalankan init navbar
-       document.getElementById("titik3").addEventListener("click", function () {
-      document.getElementById("navbar").classList.toggle("hidden");
-      document.querySelector(".search-container").classList.toggle("hidden");
-    });
+      initNavbar();
 
 </script>
 <div id="header"></div>
