--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -16,8 +16,11 @@
     document.getElementById('footer').innerHTML = html;
   });
     //   Memberi title di halaman
-document.title = "Perintah Dasar Linux untuk Pemula | Pandai Jaringan";
-  //   Jalankan init navbar
+    document.title = "Perintah Dasar Linux untuk Pemula | Pandai Jaringan";
+//   Beri variabel
+  let searchContainer = document.querySelector(".search-container");
+    let navbar = document.getElementById("navbar");
+    //   Jalankan init navbar
       initNavbar();
 
 </script>
