--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -2,27 +2,28 @@
 <html lang="id">
 <!-- Include header -->
 <script>
-    // fungsi include header
-    fetch('https://pandaijaringan.github.io/includes/header.html')
+const headerPromise = fetch('https://pandaijaringan.github.io/includes/header.html')
   .then(res => res.text())
   .then(html => {
     document.getElementById('header').innerHTML = html;
   });
 
-// Fungsi include footer
- fetch('https://pandaijaringan.github.io/includes/footer.html')
+const footerPromise = fetch('https://pandaijaringan.github.io/includes/footer.html')
   .then(res => res.text())
   .then(html => {
     document.getElementById('footer').innerHTML = html;
   });
-    //   Memberi title di halaman
-    document.title = "Perintah Dasar Linux untuk Pemula | Pandai Jaringan";
-//   Beri variabel
-  let searchContainer = document.querySelector(".search-container");
-    let navbar = document.getElementById("navbar");
-    //   Jalankan init navbar
-      initNavbar();
 
+// Tunggu kedua proses selesai
+Promise.all([headerPromise, footerPromise]).then(() => {
+  // Kode di sini dijalankan setelah header & footer selesai di-include
+  // Misal: inisialisasi variabel, jalankan fungsi, dsb
+  let searchContainer = document.querySelector(".search-container");
+  let navbar = document.getElementById("navbar");
+  let titik3 = document.getElementById("titik3");
+  initNavbar();
+  // dst...
+});
 </script>
 <div id="header"></div>
 <main>
