--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -21,7 +21,8 @@ Promise.all([headerPromise, footerPromise]).then(() => {
   searchContainer = document.querySelector(".search-container");
   navbar = document.getElementById("navbar");
   titik3 = document.getElementById("titik3");
-  titik3.addEventListener("click", toogleMobileMenu, true);
+//   titik3.addEventListener("click", toogleMobileMenu, true);
+    initNavbar();
   // dst...
 });
 </script>
