--- a/artikel/Perintah_linux.html
+++ b/artikel/Perintah_linux.html
@@ -19,6 +19,29 @@ Promise.all([headerPromise, footerPromise]).then(() => {
   // Jalankan seluruh script.js setelah header & footer selesai
   if (typeof mainInit === "function") mainInit();
 });
+
+function mainInit() {
+  // Semua kode inisialisasi dan event listener di sini
+  let searchContainer = document.querySelector(".search-container");
+  let navbar = document.getElementById("navbar");
+  let titik3 = document.getElementById("titik3");
+  const loading = document.querySelector(".loading");
+
+  function loader () {
+    setInterval(() => loading.classList.add("hidden"), 1500);
+  }
+  function toogleMobileMenu(){
+    [navbar, searchContainer].forEach(el => el.classList.toggle("hidden"));
+  }
+  if (titik3) {
+    titik3.addEventListener("click", toogleMobileMenu, true);
+  }
+  loader();
+  handleResponsiveMenu();
+  window.addEventListener("resize", handleResponsiveMenu, true);
+  filterData();
+  // ...lanjutkan seluruh kode inisialisasi lain dari script.js...
+}
 </script>
 <script src="https://pandaijaringan.github.io/script.js"></script>
 <div id="header"></div>
